# lightfast-mcp

./: .gitignore  .ruff.toml  AI_INTEGRATION.md  AI_SDK_COMPARISON.md  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  CONTRIBUTING.md  CREATIVE_INTEGRATIONS_ROADMAP.md  DEV.md  FIGMA_IMPLEMENTATION_SUMMARY.md  IMPROVED_AI_INTEGRATION.md  LICENSE  NEXT_IMPLEMENTATION_ANALYSIS.md  PHOTOSHOP_MCP_TESTING_IMPROVEMENTS.md  README.md  README_MODULAR.md  REARCHITECTURE_SUMMARY.md  SERVERSTATE_CONSOLIDATION.md  UV_INTEGRATION_SUMMARY.md  ai_blender_client.py  ai_blender_client_improved.py  bandit-report.json  demo_modular_system.py  env_template.txt  lightfast_mcp_manager.py  noxfile.py  pyproject.toml  quick_test.py  renovate.json  run_blender_http.py  test_blender_simple.py  test_figma_websocket_client.py  test_working_system.py
.cursor/: mcp.json  mcp_global_example.json
.cursor/rules/: blender-integration.mdc  config-validation-workflow.mdc  development-workflow.mdc  github-repository-reference.mdc  mcp-concepts.mdc  mcp-configuration.mdc  pre-commit-workflow.mdc  project-architecture.mdc  rule-generation.mdc  security-guidelines.mdc  server-development-workflow.mdc  server-development.mdc  server-extension.mdc  tech-documentation.mdc  testing-strategy.mdc
.github/workflows/: ci.yml  dependencies.yml  python-ci.yml  release.yml  renovate-validate.yml
addons/blender/: lightfast_blender_addon.py
addons/figma/: README.md  bridge-server.js  code.ts  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  ui.html  websocket-server.js
addons/photoshop/: README.md  index.html  lightfast_photoshop_plugin.jsx  manifest.json  styles.css
addons/photoshop/js/: main.js
config/: servers.yaml
docs/: .gitignore  package.json  pnpm-lock.yaml
docs/.source/: index.ts
docs/src/: env.ts
docs/src/app/: layout.config.tsx  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
docs/src/app/api/search/: route.ts
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/components/: icons.tsx  layout.config.tsx  mdx-components.tsx  site-header.tsx  toc-header.tsx
docs/src/components/mdx/: mermaid.tsx
docs/src/content/docs/: blender.mdx  contributing.mdx  figma.mdx  getting-started.mdx  index.mdx  installation.mdx  introduction.mdx  meta.json  photoshop.mdx  roadmap.mdx
docs/src/content/docs/application/: blender.mdx  meta.json
docs/src/content/docs/getting-started/: installation.mdx  meta.json
docs/src/content/docs/usage/: examples.mdx  meta.json
docs/src/libs/: base-url.ts  fonts.tsx  site-config.ts
examples/: README.md  ai_blender_client.py  demo_ai_integration.py  demo_modular_system.py  obj_transfer_example.py  orchestrator_demo.py
scripts/: run_tests.py  test_blender.sh  test_working_system.py
src/common/: __init__.py  types.py
src/internal/: __init__.py
src/internal/clients/: __init__.py  cli.py  multi_server_ai_client.py
src/internal/management/: config_loader.py  server_registry.py  server_selector.py
src/lightfast_mcp/: __init__.py  cli.py  exceptions.py  mock_server.py
src/lightfast_mcp/clients/: __init__.py  cli.py  multi_server_ai_client.py  server_selector.py
src/lightfast_mcp/core/: __init__.py  base_server.py  config_loader.py  multi_server_manager.py  server_registry.py
src/lightfast_mcp/management/: __init__.py  cli.py  config_loader.py  multi_server_manager.py  server_registry.py  server_selector.py
src/lightfast_mcp/servers/: __init__.py  blender_mcp_server.py  figma_mcp_server.py  mock_server.py  photoshop_mcp_server.py  websocket_mock_server.py
src/lightfast_mcp/servers/blender/: __init__.py  server.py
src/lightfast_mcp/servers/figma/: README.md  __init__.py  server.py  tools.py  websocket_server.py
src/lightfast_mcp/servers/mock/: __init__.py  server.py  tools.py
src/lightfast_mcp/servers/websocket_mock/: README.md  __init__.py  server.py  tools.py  websocket_server.py
src/lightfast_mcp/utils/: logging_utils.py
src/tools/: __init__.py
src/tools/ai/: __init__.py  cli.py  conversation_cli.py  conversation_client.py  conversation_session.py  tool_executor.py
src/tools/ai/providers/: __init__.py  base_provider.py  claude_provider.py  openai_provider.py
src/tools/common/: __init__.py  async_utils.py  errors.py  logging.py  types.py
src/tools/orchestration/: __init__.py  cli.py  config_loader.py  multi_server_manager.py  server_orchestrator.py  server_selector.py
tests/: __init__.py  conftest.py
tests/e2e/: test_figma_e2e.py  test_full_system.py  test_websocket_mock_e2e.py
tests/integration/: __init__.py  test_figma_integration.py  test_photoshop_integration.py  test_system_integration.py  test_websocket_mock_integration.py
tests/unit/: __init__.py  test_ai_client.py  test_ai_client_extended.py  test_async_utils.py  test_base_server.py  test_blender_mcp_server.py  test_blender_obj_transfer.py  test_cli.py  test_clients_cli.py  test_config_loader.py  test_config_loader_extended.py  test_conversation_client.py  test_conversation_session.py  test_figma_server.py  test_mock_server_tools.py  test_modular_servers.py  test_multi_server_manager.py  test_photoshop_edge_cases.py  test_photoshop_mcp_server.py  test_photoshop_performance.py  test_server_orchestrator.py  test_server_registry.py  test_tool_executor.py  test_websocket_mock_server.py
tests/utils/: websocket_test_client.py
